<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_Illumination" Id="{2131cdf9-2472-4c34-9c96-7eac2d13e49a}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
	
	


							
	// Define axis states for each axis. These are fed to a FB_PositionState manager for each axis
	// X axis position states
	stILMXPosPark : DUT_PositionState :=   (sName:= 'PARK',
										 	fPosition := 0.0,
										 	fDelta:=1.0,
									     	fVelocity:=5.0,
    									 	fAccel:=1.0, 
											fDecel:=1.0,
    									 	bMoveOk:=FALSE,
    									 	bLocked:=TRUE,
    									 	bValid:=TRUE);

	// Y axis position states
	stILMYPosPark : DUT_PositionState :=   (sName:= 'PARK',
										 	fPosition := 0.0,
										 	fDelta:=1.0,
									     	fVelocity:=5.0,
    									 	fAccel:=1.0, 
											fDecel:=1.0,
    									 	bMoveOk:=FALSE,
    									 	bLocked:=TRUE,
    									 	bValid:=TRUE);
											
	// Z axis position states						
	stILMZPosPark : DUT_PositionState :=   (sName:= 'PARK',
										 	fPosition := 0.0,
										 	fDelta:=1.0,
									     	fVelocity:=5.0,
    									 	fAccel:=1.0, 
											fDecel:=1.0,
    									 	bMoveOk:=FALSE,
    									 	bLocked:=TRUE,
    									 	bValid:=TRUE);
	
	fbILMXStage : FB_MotionStage;
	fbILMYStage : FB_MotionStage;
	fbILMZStage : FB_MotionStage;
	

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>