<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="PRG_Illumination" Id="{8e3cbdf0-4140-4ee5-9eb4-1ef84102a8a6}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_Illumination
(*	Program for the ChemRIXS illumination system. *)
VAR_INPUT
    xMoveOK : BOOL := FALSE; // External interlock. Applied to bEnable of all PositionStateManagers.
END_VAR
VAR
    bInit : BOOL := TRUE; // Initialization variable
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF ( bInit) THEN
    bInit := FALSE;

    Main.M9.bHardwareEnable := TRUE;
    Main.M10.bHardwareEnable := TRUE;
    Main.M11.bHardwareEnable := TRUE;

END_IF

fbILMXStage(stMotionStage := Main.M9);
fbILMYStage(stMotionStage := Main.M10);
fbILMZStage(stMotionStage := Main.M11);]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>